Mobile: Forward/rewind buttons: Show timeline: Fix if controlbar is not transparent
If it has a color set it would show up, so we make it invisible.

--- a/skin/sass/skin.sass
+++ b/skin/sass/skin.sass
@@ -114,8 +114,12 @@
       opacity: 0
 
   &.is-mobile-seeking
+    .fp-controls
+      opacity: 1
+      visibility: hidden
     .fp-timeline, .fp-forward, .fp-rewind
       opacity: 1
+      visibility: visible
 
   // topmost elements and actions
   .fp-header
@@ -320,7 +324,6 @@
     z-index: 2
     padding-left: 0.3em
     padding-right: 0.3em
-    opacity: 1;
 
     > *
       margin: 0 .6em
